# transformer

./: .gitignore  LICENSE  README.md  Transformer.py  WriteUp.md  bestmodelconfig.txt  main.py  model_20260302_170213_0  model_20260303_091500_0  model_20260303_091601_0  model_20260303_091658_0  model_20260303_091741_0  model_20260303_091907_0  model_20260303_091956_0  model_20260303_092413_0  model_20260303_092456_0  model_20260303_092832_0  model_20260303_092913_0  model_20260303_093330_0  model_20260303_093402_0  model_20260303_093919_0  model_20260303_094304_0  model_20260303_094421_0  model_20260303_094606_0  model_20260303_094950_0  model_20260303_095046_0  model_20260303_095214_0  pyproject.toml  tokenizer.py  trained_vs_untrained.py  training_text.py  transformer.ipynb
best_model_stuff/: bestmodelconfig.txt
runs/fashion_trainer_20260224_163245/: events.out.tfevents.1771975965.MSI.22820.0
runs/fashion_trainer_20260226_130217/: events.out.tfevents.1772136137.sawyelaptop.29360.0
runs/fashion_trainer_20260226_134932/: events.out.tfevents.1772138972.sawyelaptop.27548.0
runs/fashion_trainer_20260226_142352/: events.out.tfevents.1772141032.sawyelaptop.19172.0
runs/fashion_trainer_20260226_142505/: events.out.tfevents.1772141105.sawyelaptop.22324.0
runs/fashion_trainer_20260226_142517/: events.out.tfevents.1772141117.sawyelaptop.22044.0
runs/fashion_trainer_20260226_143958/: events.out.tfevents.1772141998.sawyelaptop.15828.0
src/: MinesAI.py  Transformer.py  tokenizer.py
test/: test_Transformer.py  test_tokenizer.py
(+90 files in other folders)
